array.island.Island.scala.error
Erreur de compilation :
Island:13: error: not found: value num
num.length
^Island:14: error: not found: value num
num(index)
^Island:14: error: not found: value index
num(index)
    ^